# Mock-Court

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_WIKI.md  COMPLETED_TASKS.md  Cargo.toml  Dockerfile.api  Dockerfile.web  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  install.sh  rust-optimization-plan.md  rust-port-guide.md  start-local.sh  start.sh  ui-design.md  update-ip.sh
.claude/skills/: aionui-skills  cron  office-cli  skill-creator
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.trae/documents/: attach-ocr-plan.md  deepseek-tool-calls-integration-plan.md  flow-visualization-plan.md  knowledge-base-redesign.md  multi-apikey-switch-plan.md  幡主指定功能实现计划.md
.trae/specs/: checklist.md  spec.md  tasks.md
.trae/specs.backup/: checklist.md  spec.md  tasks.md
.trae/specs/conference-functional-testing/: checklist.md  spec.md  tasks.md
.trae/specs/ui-flow-unification/: checklist.md  spec.md  tasks.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  integration-test-instructions.md  performance-test-instructions.md  unit-test-instructions.md
aidlc-docs/construction/plans/: B1-foundation-nfr-design-plan.md  (+40 more)
config/: default.yaml  domain.court.yaml  domain.labor.yaml  domain.legal.yaml.example  domain.philosophy.yaml.bak  domain.yaml  lmstudio-system-prompt.txt
data/: claude.json
data/souls/: README.md  专家证人.md  仲裁法官.md  列宁.md  劳动者之声.md  原告律师.md  安姐.md  平权者.md  庄子.md  张一鸣.md  斯大林.md  未明子.md  李飞飞.md  毛泽东.md  波伏娃.md  海绵宝宝.md  老合同.md  被告律师.md  豪尔赫·路易斯·博尔赫斯.md  费曼.md  集体之声.md  韩炳哲.md  首席工友.md  马斯克.md  黑格尔.md
deploy/: .env.example  Caddyfile  Caddyfile.local  litellm_config.yaml  searxng-settings.yml  setup.sh
docs/: PLAN_AI_edge-inference.md  PLAN_HUMAN_edge-inference.md  code-review-2025-05-24.md  edge-inference-roadmap.md  lmstudio-9b-vs-27b-comparison-2026-05-24.md  lmstudio-depth-test-2026-05-24.md  lmstudio-depth-test-27b-2026-05-24.md  lmstudio-depth-test-no-sentence-limit-2026-05-24.md  lmstudio-system-prompt-test-2025-05-24.md
meta/: DESIGN_SPEC.md  OVERVIEW.md  README.md  migration.md  roadmap.md
nextjs/: .env.example  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
nextjs/__tests__/: conference-view.test.tsx
nextjs/app/: globals.css  layout.tsx  page.tsx
nextjs/components/: agent.ts  alert-panel.tsx  article-modal.tsx  attachment-upload.tsx  breadcrumb-setter.tsx  breadcrumb.tsx  collision-notification.tsx  conference-view.tsx  cost-display.tsx  dashboard-charts.tsx  debate-view.tsx  delete-soul-button.tsx  delete-soul-confirm-dialog.tsx  domain-switcher.tsx  edit-soul-dialog.tsx  effectiveness-panel.tsx  follow-up-input.tsx  header.tsx  ismism-radar.tsx  knowledge-browser.tsx  knowledge-search.tsx  learn-view.tsx  md-text.tsx  message-fork-button.tsx  mobile-menu-button.tsx  mode-bar-chart.tsx  nav-item.tsx  possession-entry.tsx  post-session-review.tsx  practice-observations.tsx  practice-opening-dialog.tsx  practice-opening-view.tsx  providers.tsx  quick-actions.tsx  relay-view.tsx  searxng-search.tsx  session-actions.tsx  session-context-header.tsx  session-detail-view.tsx  session-runner.tsx  (+32 more)
nextjs/config/: models.ts  nav.ts  possession-modes.ts  presets.ts  soul-filter.ts
nextjs/contexts/: breadcrumb-context.tsx  domain-context.tsx  sidebar-context.tsx
nextjs/hooks/: use-clean-content.ts  use-websocket.ts
nextjs/lib/: api.ts  auth.tsx  pending-session.ts  soul-utils.ts
nextjs/public/: landing.html  manifest.json  sw-register.js  sw.js
rust/.cargo/: config.toml
rust/ai-gateway/: Cargo.toml
rust/ai-gateway/src/: cache.rs  claude.rs  deepseek.rs  lib.rs  lmstudio.rs  model_router.rs  openai.rs  prompt.rs  prompt.rs.bak
rust/api/: Cargo.toml
rust/api/src/: auth.rs  bing.rs  coding_tools.rs  collector.rs  duckduckgo.rs  error.rs  main.rs  middleware.rs  ocr.rs  rate_limiter.rs  state.rs  store.rs  web_fetch_tool.rs  web_search_tool.rs  worker_tools.rs  ws.rs
rust/api/src/routes/: analytics.rs  apikey.rs  archive.rs  auth_route.rs  config.rs  knowledge.rs  mod.rs  possess.rs  searxng.rs  sessions.rs  souls.rs
rust/archive/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: init.rs  main.rs
rust/data/: .gitkeep
rust/foundation/: Cargo.toml
rust/foundation/src/: config.rs  domain.rs  error.rs  fs_store.rs  health.rs  lib.rs  models.rs  sqlite.rs  storage.rs  vector_search.rs
rust/possession/: Cargo.toml
rust/possession/src/: cross_detector.rs  distiller.rs  lib.rs  recovery.rs  semantic_collision.rs  stream.rs  tools.rs  triage.rs  ws.rs
rust/possession/src/modes/: conference.rs  debate.rs  learn.rs  mod.rs  practice_opening.rs  relay.rs  single.rs  teaching.rs  topology.rs
rust/possession/src/soul/: hybridization.rs  intervention.rs  memory_graph.rs  mod.rs  process.rs  reputation.rs  self_audit.rs
rust/registry/: Cargo.toml
rust/registry/src/: fulltext_search.rs  ismism.rs  lib.rs  search.rs
scripts/: control_rules.example.json  import-souls.sh  inference_control_layer.py  lmstudio_depth_test.py  start-local.sh  sync-agent-souls.py  test_all_directions.py  usage_example.py
scripts/forgejo/: README.md  docker-compose.yml
tasks/: phase1-intervention.md  phase2-semantic-collision.md  phase3-4-memory-topology.md  phase5-reputation-hybrid-teaching.md
windows/: installer.wxs  start.bat
(+171 files in other folders)
