[workspace]
members = [
    "rust/foundation",
    "rust/registry",
    "rust/ai-gateway",
    "rust/archive",
    "rust/possession",
    "rust/api",
    "rust/cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
dashmap = "5"
sha2 = "0.10"
hex = "0.4"
