[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation = { path = "../foundation" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
tera = "1"
futures = "0.3"
