[package]
name = "snake-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snake"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
indicatif = "0.17"
