[package]
name = "foundation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { workspace = true }
uuid = { workspace = true }
config = "0.14"
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"
